# Kron

./: .gitignore  CHANGES.md
kron-core/: .gitignore  Cargo.toml
kron-core/crates/kron-ai/: Cargo.toml
kron-core/crates/kron-ai/src/: error.rs  inference.rs  lib.rs  metrics.rs  registry.rs
kron-core/crates/kron-ai/src/onnx/: anomaly.rs  beaconing.rs  exfil.rs  mod.rs  session.rs  ueba.rs
kron-core/crates/kron-alert/: Cargo.toml
kron-core/crates/kron-alert/src/: assembler.rs  dedup.rs  engine.rs  error.rs  lib.rs  main.rs  metrics.rs  narrative.rs  types.rs
kron-core/crates/kron-alert/src/notify/: dispatcher.rs  email.rs  mod.rs  rate_limit.rs  sms.rs  whatsapp.rs
kron-core/crates/kron-auth/: Cargo.toml
kron-core/crates/kron-auth/src/: brute_force.rs  error.rs  jwt.rs  lib.rs  metrics.rs  mfa.rs  password.rs  rbac.rs  session.rs
kron-core/crates/kron-auth/tests/: auth_integration.rs
kron-core/crates/kron-auth/tests/fixtures/: test_jwt.pub
kron-core/crates/kron-bus/: Cargo.toml
kron-core/crates/kron-bus/src/: adaptive.rs  error.rs  lib.rs  metrics.rs  topics.rs  traits.rs
kron-core/crates/kron-bus/src/embedded/: consumer.rs  mod.rs  producer.rs  state.rs  wal.rs
kron-core/crates/kron-bus/src/redpanda/: consumer.rs  mod.rs  producer.rs
kron-core/crates/kron-collector/: Cargo.toml
kron-core/crates/kron-collector/src/: codec.rs  collector.rs  error.rs  grpc.rs  http_intake.rs  lib.rs  main.rs  metrics.rs  registry.rs  shutdown.rs  syslog.rs
kron-core/crates/kron-normalizer/: Cargo.toml
kron-core/crates/kron-normalizer/src/: dedup.rs  error.rs  lib.rs  main.rs  metrics.rs  normalizer.rs  pipeline.rs  shutdown.rs  timestamp.rs
kron-core/crates/kron-normalizer/src/enrich/: asset.rs  geoip.rs  mod.rs
kron-core/crates/kron-normalizer/src/parser/: cef.rs  json_event.rs  leef.rs  mod.rs
kron-core/crates/kron-query-api/: Cargo.toml
kron-core/crates/kron-query-api/src/: error.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
kron-core/crates/kron-query-api/src/handlers/: alerts.rs  assets.rs  auth.rs  compliance.rs  events.rs  health.rs  mod.rs  rules.rs  tenants.rs
kron-core/crates/kron-query-api/src/ws/: alerts.rs  events.rs  mod.rs
kron-core/crates/kron-storage/: Cargo.toml
kron-core/crates/kron-storage/src/: adaptive.rs  assets.rs  duckdb.rs  lib.rs  login_attempts.rs  migration.rs  query.rs  revoked_tokens.rs  tenant.rs  traits.rs  users.rs
kron-core/crates/kron-storage/src/clickhouse/: mod.rs  retry.rs  rows.rs
kron-core/crates/kron-stream/: Cargo.toml
kron-core/crates/kron-stream/src/: error.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
kron-core/crates/kron-stream/src/ioc/: bloom.rs  feed.rs  filter.rs  metrics.rs  mod.rs  refresh.rs  types.rs
kron-core/crates/kron-stream/src/pipeline/: entity_graph.rs  mitre.rs  mod.rs  processor.rs  risk_score.rs
kron-core/crates/kron-stream/src/sigma/: ast.rs  compiler.rs  compiler_clickhouse.rs  compiler_duckdb.rs  condition.rs  evaluator.rs  field_map.rs  fp_classifier.rs  loader.rs  matcher.rs  mod.rs  registry.rs  types.rs
kron-core/crates/kron-types/: Cargo.toml
kron-core/crates/kron-types/src/: agent.rs  alert.rs  config.rs  context.rs  enums.rs  error.rs  event.rs  ids.rs  lib.rs
kron-docs/build-order/: BuildOrder.md  ComponentDependencies.md  DesignPartnerPlaybook.md  Enterprise-BuildOrder.md  MilestoneChecklist.md  Nano-BuildOrder.md  Standard-BuildOrder.md
kron-docs/docs/: AIInstructions.md  API.md  Architecture.md  Database.md  Deployment.md  Features.md  GETTING_STARTED.md  PRD.md  README.md  Roadmap.md  Runbooks.md  Security.md  TechStack.md  UIUX.md  support-process.md
kron-docs/engineering/: AntiPatterns.md  CLAUDE.md  CONTEXT.md  CodeStructure.md  DECISIONS.md  ErrorHandling.md  PHASES.md  TestingGuide.md  WorkspaceSetup.md
kron-mobile/: README.md  pubspec.yaml
kron-mobile/android/: key.properties.example
kron-mobile/ios/: ExportOptions.plist  Podfile
kron-nano/: .gitignore  Cargo.toml
kron-nano/.github/workflows/: release.yml
kron-nano/crates/kron-nano/: Cargo.toml
kron-nano/crates/kron-nano-setup/: Cargo.toml  build.rs  setup.manifest
kron-nano/crates/kron-nano-setup/src/: main.rs
kron-nano/crates/kron-nano/src/: main.rs
kron-nano/deploy/nano/: Dockerfile  docker-compose.yml  download-widget.html  install.ps1  install.sh  kron-nano.default.toml  prometheus.yml  uninstall.ps1
kron-standard/: Cargo.toml
kron-standard/crates/kron-agent/: Cargo.toml  build.rs
kron-standard/crates/kron-agent/bpf/: file_access.bpf.c  kron_types.h  network_connect.bpf.c  process_create.bpf.c  vmlinux.h
kron-standard/crates/kron-agent/src/: agent.rs  bpf_types.rs  config.rs  error.rs  heartbeat.rs  main.rs  metrics.rs  shutdown.rs
kron-standard/crates/kron-agent/src/buffer/: mod.rs  segment.rs
kron-standard/crates/kron-agent/src/ebpf/: linux.rs  mod.rs
kron-standard/crates/kron-agent/src/events/: mod.rs
kron-standard/crates/kron-agent/src/transport/: codec.rs  grpc.rs  mod.rs
kron-standard/crates/kron-compliance/: Cargo.toml
kron-standard/crates/kron-compliance/src/: certin.rs  dpdp.rs  error.rs  evidence.rs  lib.rs  main.rs  rbi.rs  report.rs  sebi.rs  types.rs
kron-standard/crates/kron-ctl/: Cargo.toml
kron-standard/crates/kron-ctl/src/: client.rs  config.rs  error.rs  main.rs  output.rs
kron-standard/crates/kron-ctl/src/cmd/: agents.rs  events.rs  health.rs  migration.rs  mod.rs  storage.rs
kron-standard/crates/kron-soar/: Cargo.toml
kron-standard/crates/kron-soar/src/: main.rs
kron-standard/deploy/compose/: docker-compose.dev.yml  docker-compose.qa.yml  prometheus.dev.yml
kron-standard/deploy/compose/grafana/dashboards/: dashboards.yml
kron-standard/deploy/docker/: kron-ai.Dockerfile  kron-alert.Dockerfile  kron-auth.Dockerfile  kron-collector.Dockerfile  kron-compliance.Dockerfile  kron-normalizer.Dockerfile  kron-query-api.Dockerfile  kron-soar.Dockerfile  kron-stream.Dockerfile
kron-standard/deploy/prometheus/: alerts.yml
kron-standard/deploy/standard/: docker-compose.yml  kron.default.toml  prometheus.yml
(+33 files in other folders)
