[workspace]
resolver = "2"
members = [
    "crates/kron-agent",
    "crates/kron-soar",
    "crates/kron-compliance",
    "crates/kron-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Hardik <hardik@kron.security>"]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "limit", "timeout", "set-header", "request-id", "util"] }
tonic = { version = "0.11", features = ["tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = ">=0.4, <0.4.38", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
dashmap = "5"
zip = "0.6"
sha2 = "0.10"
argon2 = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
maxminddb = "0.24"
jsonwebtoken = { version = "10", features = ["use_pem", "rust_crypto"] }
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
aya = { version = "0.12" }
aya-log = "0.2"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
missing_docs = "warn"
missing_errors_doc = "warn"
