[package]
name = "kron-alert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Alert engine for KRON — deduplication, narrative generation, WhatsApp/SMS/email."

[[bin]]
name = "kron-alert"
path = "src/main.rs"

[lib]
name = "kron_alert"
path = "src/lib.rs"

[dependencies]
kron-types = { path = "../kron-types" }
kron-bus = { path = "../kron-bus" }
kron-storage = { path = "../kron-storage" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
bytes = { workspace = true }

[lints]
workspace = true
