[package]
name = "kron-collector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Event intake service for KRON — gRPC, syslog, HTTP, cloud, and OT sources."

[[bin]]
name = "kron-collector"
path = "src/main.rs"

[lib]
name = "kron_collector"
path = "src/lib.rs"

[dependencies]
kron-types = { path = "../kron-types" }
kron-bus   = { path = "../kron-bus" }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
metrics    = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tonic      = { workspace = true }
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }
toml       = { workspace = true }
async-trait = { workspace = true }
futures    = { workspace = true }
http       = "0.2"
http-body  = "0.4"

[lints]
workspace = true
