[package]
name = "kron-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Stream detection engine for KRON — SIGMA rules, IOC bloom filter, ONNX scoring."

[[bin]]
name = "kron-stream"
path = "src/main.rs"

[lib]
name = "kron_stream"
path = "src/lib.rs"

[dependencies]
kron-types = { path = "../kron-types" }
kron-bus = { path = "../kron-bus" }
kron-storage = { path = "../kron-storage" }
kron-ai = { path = "../kron-ai" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
chrono = { workspace = true }
xxhash-rust = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
