[package]
name = "kron-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for the KRON SIEM platform — TenantId, KronEvent, KronAlert, KronConfig, and all enums."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
