[package]
name = "kron-compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Compliance engine for KRON — CERT-In, RBI, DPDP Act, SEBI CSCRF reporting."

[[bin]]
name = "kron-compliance"
path = "src/main.rs"

[lib]
name = "kron_compliance"
path = "src/lib.rs"

[dependencies]
kron-types = { path = "../../../kron-core/crates/kron-types" }
kron-storage = { path = "../../../kron-core/crates/kron-storage", features = ["clickhouse-backend"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
